--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
     "@material-tailwind/react": "^2.0.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.7.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
