--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^6.0.13",
     "@material-tailwind/react": "^2.0.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
@@ -27,7 +28,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1",
     "vite": "^4.2.0"
