--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@mantine/core": "^6.0.13",
     "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
     "@mantine/notifications": "^6.0.13",
     "@material-tailwind/react": "^2.0.1",
+    "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
